update: removido carrosel.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p>Agilidade, Confiança e Experiência para Resolver seus Documentos</p>
     </div>
 
-    <!-- HTML do Carrossel Automático -->
+    <!-- <!-- HTML do Carrossel Automático
     <div class="carousel-container">
       <div class="carousel-slides">
         <div class="slide active">
@@ -47,10 +47,10 @@
         <div class="slide">
           <img src="assets/loja3.jpg" alt="Foto 3" />
         </div>
-      </div>
+      </div> -->
 
       <!-- Indicadores apenas visuais (não clicáveis) -->
-      <div class="carousel-indicators">
+      <!-- <div class="carousel-indicators">
         <span class="dot active"></span>
         <span class="dot"></span>
         <span class="dot"></span>
